i40e/i40evf: Bump build versions (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15557,6 +15557,7 @@
 	patches.drivers/i40e-0264-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/i40e-0265-i40e-Add-bridge-FDB-add-del-dump-ops.patch
 	patches.drivers/i40e-0266-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
+	patches.drivers/i40e-0267-i40e-i40evf-Bump-build-versions.patch
 
 	########################################################
 	# Wireless Networking
