i40e: remove and fix confusing define name (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15363,6 +15363,7 @@
 	patches.drivers/i40e-0070-i40e-restrict-diag-test-messages.patch
 	patches.drivers/i40e-0071-i40e-loopback-info-and-set-loopback-fix.patch
 	patches.drivers/i40e-0072-i40e-complain-about-out-of-range-descriptor-request.patch
+	patches.drivers/i40e-0073-i40e-remove-and-fix-confusing-define-name.patch
 
 	########################################################
 	# Wireless Networking
