--- a/series.conf
+++ b/series.conf
@@ -15504,6 +15504,7 @@
 	patches.drivers/i40e-0211-i40e-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/i40e-0212-i40e-remove-unnecessary-delay.patch
 	patches.drivers/i40e-0213-i40e-tighten-up-ring-enable-disable-flow.patch
+	patches.drivers/i40e-0214-i40e-Change-MSIX-to-MSI-X.patch
 
 	########################################################
 	# Wireless Networking
