i40e: use correct struct for get and update vsi params (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15427,6 +15427,7 @@
 	patches.drivers/i40e-0134-i40e-acknowledge-VFLR-when-disabling-SR-IOV.patch
 	patches.drivers/i40e-0135-i40e-support-VFs-on-PFs-other-than-0.patch
 	patches.drivers/i40e-0136-i40e-Fix-VF-driver-MAC-address-configuration.patch
+	patches.drivers/i40e-0137-i40e-use-correct-struct-for-get-and-update-vsi-param.patch
 
 	########################################################
 	# Wireless Networking
