--- a/series.conf
+++ b/series.conf
@@ -15487,6 +15487,7 @@
 	patches.drivers/i40e-0194-i40e-fix-compile-warning-on-checksum_local.patch
 	patches.drivers/i40e-0195-i40e-Change-firmware-workaround.patch
 	patches.drivers/i40e-0196-i40e-whitespace-fixes.patch
+	patches.drivers/i40e-0197-i40e-rename-defines.patch
 
 	########################################################
 	# Wireless Networking
