i40e: refactor flow director (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15488,6 +15488,7 @@
 	patches.drivers/i40e-0195-i40e-Change-firmware-workaround.patch
 	patches.drivers/i40e-0196-i40e-whitespace-fixes.patch
 	patches.drivers/i40e-0197-i40e-rename-defines.patch
+	patches.drivers/i40e-0198-i40e-refactor-flow-director.patch
 
 	########################################################
 	# Wireless Networking
