i40e: Setting queue count to 1 using ethtool is valid (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15465,6 +15465,7 @@
 	patches.drivers/i40e-0172-i40e-Update-the-Current-NVM-version-Low-value.patch
 	patches.drivers/i40e-0173-i40e-fix-long-lines.patch
 	patches.drivers/i40e-0174-i40e-Cleanup-Doxygen-warnings.patch
+	patches.drivers/i40e-0175-i40e-Setting-queue-count-to-1-using-ethtool-is-valid.patch
 
 	########################################################
 	# Wireless Networking
