i40e: Do not accept tagged packets by default (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15652,6 +15652,7 @@
 	patches.drivers/i40e-0359-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 	patches.drivers/i40e-0360-i40e-Change-the-notion-of-src-and-dst-for-FD_SB-in-e.patch
 	patches.drivers/i40e-0361-i40e-Separate-out-DCB-capability-and-enabled-flags.patch
+	patches.drivers/i40e-0362-i40e-Do-not-accept-tagged-packets-by-default.patch
 
 	########################################################
 	# Wireless Networking
