i40e: Avoid adding the TCP-IPv4 filter twice (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15688,6 +15688,7 @@
 	patches.drivers/i40e-0395-i40e-break-PTP-hardware-control-from-ioctl-command-f.patch
 	patches.drivers/i40e-0396-i40e-don-t-store-user-requested-mode-until-we-ve-val.patch
 	patches.drivers/i40e-0397-i40e-only-create-PTP-device-node-once.patch
+	patches.drivers/i40e-0398-i40e-Avoid-adding-the-TCP-IPv4-filter-twice.patch
 
 	########################################################
 	# Wireless Networking
