i40e: I40E_FLAG_MQ_ENABLED is not used (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15415,6 +15415,7 @@
 	patches.drivers/i40e-0122-i40e-keep-allocated-memory-in-structs.patch
 	patches.drivers/i40e-0123-i40e-catch-unset-q_vector.patch
 	patches.drivers/i40e-0124-i40e-Fix-ring-allocation.patch
+	patches.drivers/i40e-0125-i40e-I40E_FLAG_MQ_ENABLED-is-not-used.patch
 
 	########################################################
 	# Wireless Networking
