i40e: correctly setup ARQ descriptors (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15445,6 +15445,7 @@
 	patches.drivers/i40e-0152-i40e-whitespace-paren-and-comment-tweaks.patch
 	patches.drivers/i40e-0153-i40e-Enable-Disable-PF-switch-LB-on-SR-IOV-configure.patch
 	patches.drivers/i40e-0154-i40e-remove-redundant-AQ-enable.patch
+	patches.drivers/i40e-0155-i40e-correctly-setup-ARQ-descriptors.patch
 
 	########################################################
 	# Wireless Networking
