--- a/series.conf
+++ b/series.conf
@@ -15332,6 +15332,7 @@
 	patches.drivers/i40e-0039-i40e-check-vsi-ptrs-before-dumping-them.patch
 	patches.drivers/i40e-0040-i40e-use-pf_id-for-pf-function-id-in-qtx_ctl.patch
 	patches.drivers/i40e-0041-i40e-remove-unused-including-linux-version.h.patch
+	patches.drivers/i40e-0042-i40e-fix-error-return-code-in-i40e_probe.patch
 
 	########################################################
 	# Wireless Networking
