i40e: fix null dereference (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15364,6 +15364,7 @@
 	patches.drivers/i40e-0071-i40e-loopback-info-and-set-loopback-fix.patch
 	patches.drivers/i40e-0072-i40e-complain-about-out-of-range-descriptor-request.patch
 	patches.drivers/i40e-0073-i40e-remove-and-fix-confusing-define-name.patch
+	patches.drivers/i40e-0074-i40e-fix-null-dereference.patch
 
 	########################################################
 	# Wireless Networking
