i40e/i40evf: Fix code to accommodate i40e_register.h changes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15628,6 +15628,7 @@
 	patches.drivers/i40e-0335-i40e-don-t-remove-HMC-that-doesn-t-exist.patch
 	patches.drivers/i40e-0336-i40e-remove-irqs-only-when-they-are-set-up.patch
 	patches.drivers/i40e-0337-i40e-i40evf-fix-rx-descriptor-status.patch
+	patches.drivers/i40e-0338-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
 
 	########################################################
 	# Wireless Networking
