--- a/series.conf
+++ b/series.conf
@@ -15500,6 +15500,7 @@
 	patches.drivers/i40e-0207-i40e-set-VF-state-to-active-when-reset-is-complete.patch
 	patches.drivers/i40e-0208-i40e-reset-VFs-after-PF-reset.patch
 	patches.drivers/i40e-0209-i40e-enable-extant-VFs.patch
+	patches.drivers/i40e-0210-i40e-don-t-handle-VF-reset-on-unload.patch
 
 	########################################################
 	# Wireless Networking
