i40e: fix up scanf decoders (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15380,6 +15380,7 @@
 	patches.drivers/i40e-0087-i40e-Fix-dump-output-from-debugfs-calls.patch
 	patches.drivers/i40e-0088-i40e-prevent-null-pointer-exception-in-dump-descript.patch
 	patches.drivers/i40e-0089-i40e-simplify-error-messages-for-dump-descriptor.patch
+	patches.drivers/i40e-0090-i40e-fix-up-scanf-decoders.patch
 
 	########################################################
 	# Wireless Networking
