--- a/series.conf
+++ b/series.conf
@@ -15664,6 +15664,7 @@
 	patches.drivers/i40e-0371-i40e-Fix-dangling-ring-pointers-upon-driver-removal.patch
 	patches.drivers/i40e-0372-i40e-Helper-routine-for-Rx-Tx-queue-enable-disable-w.patch
 	patches.drivers/i40e-0373-i40e-debugfs-fix-to-dump-remote-LLDPDU.patch
+	patches.drivers/i40e-0374-i40e-Fix-scheduling-while-atomic-bug-during-NAPI.patch
 
 	########################################################
 	# Wireless Networking
