i40e: print message for pre-production hardware (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15618,6 +15618,7 @@
 	patches.drivers/i40e-0325-i40e-add-missing-VSI-statistics.patch
 	patches.drivers/i40e-0326-i40e-set-lan_veb-index.patch
 	patches.drivers/i40e-0327-i40e-add-VEB-stats-to-ethtool.patch
+	patches.drivers/i40e-0328-i40e-print-message-for-pre-production-hardware.patch
 
 	########################################################
 	# Wireless Networking
