i40e: better return values (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15304,6 +15304,7 @@
 	patches.drivers/i40e-0011-i40e-use-common-failure-flow.patch
 	patches.drivers/i40e-0012-i40e-small-clean-ups-from-review.patch
 	patches.drivers/i40e-0013-i40e-convert-ret-to-aq_ret.patch
+	patches.drivers/i40e-0014-i40e-better-return-values.patch
 
 	########################################################
 	# Wireless Networking
