--- a/series.conf
+++ b/series.conf
@@ -15378,6 +15378,7 @@
 	patches.drivers/i40e-0085-i40e-support-for-suspend-and-resume.patch
 	patches.drivers/i40e-0086-i40e-Remove-FCoE-in-i40e_virtchnl_pf.c-code.patch
 	patches.drivers/i40e-0087-i40e-Fix-dump-output-from-debugfs-calls.patch
+	patches.drivers/i40e-0088-i40e-prevent-null-pointer-exception-in-dump-descript.patch
 
 	########################################################
 	# Wireless Networking
