i40e: Update flow director error messages to reduce user confusion (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15742,6 +15742,7 @@
 	patches.drivers/i40e-0449-i40e-Fix-a-few-potential-VF-dereferences.patch
 	patches.drivers/i40e-0450-i40e-fix-PTP-bug.patch
 	patches.drivers/i40e-0451-i40e-Fix-TSO-and-hw-checksums-for-non-accelerated-vl.patch
+	patches.drivers/i40e-0452-i40e-Update-flow-director-error-messages-to-reduce-u.patch
 
 	########################################################
 	# Wireless Networking
