--- a/series.conf
+++ b/series.conf
@@ -15326,6 +15326,7 @@
 	patches.drivers/i40e-0033-i40e-clamp-debugfs-nvm-read-command.patch
 	patches.drivers/i40e-0034-i40e-fix-use-of-untrusted-scalar-value-warning.patch
 	patches.drivers/i40e-0035-i40e-fix-sign-extension-issue.patch
+	patches.drivers/i40e-0036-i40e-refactor-fdir-setup-function.patch
 
 	########################################################
 	# Wireless Networking
