i40e: loopback info and set loopback fix (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15361,6 +15361,7 @@
 	patches.drivers/i40e-0068-i40e-add-num_VFs-message.patch
 	patches.drivers/i40e-0069-i40e-Add-a-new-variable-to-track-number-of-pf-instan.patch
 	patches.drivers/i40e-0070-i40e-restrict-diag-test-messages.patch
+	patches.drivers/i40e-0071-i40e-loopback-info-and-set-loopback-fix.patch
 
 	########################################################
 	# Wireless Networking
