i40e: Prevent overflow due to kzalloc (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15506,6 +15506,7 @@
 	patches.drivers/i40e-0213-i40e-tighten-up-ring-enable-disable-flow.patch
 	patches.drivers/i40e-0214-i40e-Change-MSIX-to-MSI-X.patch
 	patches.drivers/i40e-0215-i40e-Flow-Director-sideband-accounting.patch
+	patches.drivers/i40e-0216-i40e-Prevent-overflow-due-to-kzalloc.patch
 
 	########################################################
 	# Wireless Networking
