i40e: Record dma buffer info for dummy packets (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15418,6 +15418,7 @@
 	patches.drivers/i40e-0125-i40e-I40E_FLAG_MQ_ENABLED-is-not-used.patch
 	patches.drivers/i40e-0126-i40e-Remove-unnecessary-prototypes.patch
 	patches.drivers/i40e-0127-i40e-remove-un-necessary-io-write.patch
+	patches.drivers/i40e-0128-i40e-Record-dma-buffer-info-for-dummy-packets.patch
 
 	########################################################
 	# Wireless Networking
