--- a/series.conf
+++ b/series.conf
@@ -15752,6 +15752,7 @@
 	patches.drivers/i40e-0459-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
 	patches.drivers/i40e-0460-i40e-quiet-complaints-when-removing-default-MAC-VLAN.patch
 	patches.drivers/i40e-0461-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
+	patches.drivers/i40e-0462-i40e-i40evf-Bump-i40e-i40evf-version.patch
 
 	########################################################
 	# Wireless Networking
