i40e: Finish implementation of ethtool get settings (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15705,6 +15705,7 @@
 	patches.drivers/i40e-0412-i40e-tolerate-lost-interrupts.patch
 	patches.drivers/i40e-0413-i40e-Fix-a-boundary-condition-and-turning-off-of-ntu.patch
 	patches.drivers/i40e-0414-i40e-disable-TPH.patch
+	patches.drivers/i40e-0415-i40e-Finish-implementation-of-ethtool-get-settings.patch
 
 	########################################################
 	# Wireless Networking
