--- a/series.conf
+++ b/series.conf
@@ -15398,6 +15398,7 @@
 	patches.drivers/i40e-0105-i40e-refactor-VF-reset-flow.patch
 	patches.drivers/i40e-0106-i40e-remove-redundant-code.patch
 	patches.drivers/i40e-0107-i40e-remove-chatty-log-messages.patch
+	patches.drivers/i40e-0108-i40e-fix-error-return.patch
 
 	########################################################
 	# Wireless Networking
