--- a/series.conf
+++ b/series.conf
@@ -15690,6 +15690,7 @@
 	patches.drivers/i40e-0397-i40e-only-create-PTP-device-node-once.patch
 	patches.drivers/i40e-0398-i40e-Avoid-adding-the-TCP-IPv4-filter-twice.patch
 	patches.drivers/i40e-0399-i40e-Fix-the-FD-sideband-logic-to-detect-a-FD-table-.patch
+	patches.drivers/i40e-0400-i40e-Add-debugfs-hooks-to-print-current-total-FD-fil.patch
 
 	########################################################
 	# Wireless Networking
