i40e: Cleanup Doxygen warnings (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15464,6 +15464,7 @@
 	patches.drivers/i40e-0171-i40e-drop-unused-macros.patch
 	patches.drivers/i40e-0172-i40e-Update-the-Current-NVM-version-Low-value.patch
 	patches.drivers/i40e-0173-i40e-fix-long-lines.patch
+	patches.drivers/i40e-0174-i40e-Cleanup-Doxygen-warnings.patch
 
 	########################################################
 	# Wireless Networking
