i40e: use pf_id for pf function id in qtx_ctl (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15330,6 +15330,7 @@
 	patches.drivers/i40e-0037-i40e-tweaking-icr0-handling-for-legacy-irq.patch
 	patches.drivers/i40e-0038-i40e-reorder-block-declarations-in-debugfs.patch
 	patches.drivers/i40e-0039-i40e-check-vsi-ptrs-before-dumping-them.patch
+	patches.drivers/i40e-0040-i40e-use-pf_id-for-pf-function-id-in-qtx_ctl.patch
 
 	########################################################
 	# Wireless Networking
