--- a/series.conf
+++ b/series.conf
@@ -15539,6 +15539,7 @@
 	patches.drivers/i40e-0246-i40e-i40evf-reduce-context-descriptors.patch
 	patches.drivers/i40e-0247-i40e-potential-array-underflow-in-i40e_vc_process_vf.patch
 	patches.drivers/i40e-0248-i40e-i40evf-Add-EEE-LPI-stats.patch
+	patches.drivers/i40e-0249-i40e-Fix-a-message-string.patch
 
 	########################################################
 	# Wireless Networking
