i40e/i40evf: set headwb Tx context flags and use them (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15648,6 +15648,7 @@
 	patches.drivers/i40e-0355-i40e-Do-not-fall-back-to-one-queue-model-if-the-only.patch
 	patches.drivers/i40e-0356-i40e-Delete-stale-MAC-filters-after-change.patch
 	patches.drivers/i40e-0357-i40e-Allow-RSS-table-entry-range-and-GPS-to-be-any-n.patch
+	patches.drivers/i40e-0358-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
 
 	########################################################
 	# Wireless Networking
