i40e: add clear_pxe AdminQ request (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15602,6 +15602,7 @@
 	patches.drivers/i40e-0309-i40e-i40evf-remove-storm-control.patch
 	patches.drivers/i40e-0310-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 	patches.drivers/i40e-0311-i40e-Clear-recovery-pending-if-reset-failed.patch
+	patches.drivers/i40e-0312-i40e-add-clear_pxe-AdminQ-request.patch
 
 	########################################################
 	# Wireless Networking
