i40e: Change wording to be more consistent (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15755,6 +15755,7 @@
 	patches.drivers/i40e-0462-i40e-i40evf-Bump-i40e-i40evf-version.patch
 	patches.drivers/i40e-0463-i40e-Add-dual-speed-module-support.patch
 	patches.drivers/i40e-0464-i40e-Allow-user-to-change-link-settings-if-link-is-d.patch
+	patches.drivers/i40e-0465-i40e-Change-wording-to-be-more-consistent.patch
 
 	########################################################
 	# Wireless Networking
