i40e: enable PTP (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15472,6 +15472,7 @@
 	patches.drivers/i40e-0179-i40e-adjust-ITR-max-and-min-values.patch
 	patches.drivers/i40e-0180-i40e-clear-qtx_head-before-enabling-Tx-queue.patch
 	patches.drivers/i40e-0181-i40e-call-clear_pxe-after-adminq-is-initialized.patch
+	patches.drivers/i40e-0182-i40e-enable-PTP.patch
 
 	########################################################
 	# Wireless Networking
