--- a/series.conf
+++ b/series.conf
@@ -15730,6 +15730,7 @@
 	patches.drivers/i40e-0437-i40e-adds-FCoE-to-build-and-updates-its-documentatio.patch
 	patches.drivers/i40e-0438-i40e-expose-debug_write_register-request.patch
 	patches.drivers/i40e-0439-i40e-use-correct-vf_id-offset-for-virtchnl-message.patch
+	patches.drivers/i40e-0440-i40e-disable-local-loopback-on-vmdq-vsi.patch
 
 	########################################################
 	# Wireless Networking
