--- a/series.conf
+++ b/series.conf
@@ -15633,6 +15633,7 @@
 	patches.drivers/i40e-0340-i40e-Fix-incorrect-feature-configuration-status.patch
 	patches.drivers/i40e-0341-i40e-clear-pxe-after-adminq-is-rebuilt.patch
 	patches.drivers/i40e-0342-i40e-not-all-VSIs-have-rings.patch
+	patches.drivers/i40e-0343-i40e-i40evf-remove-chatty-reset-messages.patch
 
 	########################################################
 	# Wireless Networking
