i40e: Admin queue shutdown fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15429,6 +15429,7 @@
 	patches.drivers/i40e-0136-i40e-Fix-VF-driver-MAC-address-configuration.patch
 	patches.drivers/i40e-0137-i40e-use-correct-struct-for-get-and-update-vsi-param.patch
 	patches.drivers/i40e-0138-i40e-Hide-the-Port-VLAN-VLAN-ID.patch
+	patches.drivers/i40e-0139-i40e-Admin-queue-shutdown-fixes.patch
 
 	########################################################
 	# Wireless Networking
