--- a/series.conf
+++ b/series.conf
@@ -15403,6 +15403,7 @@
 	patches.drivers/i40e-0110-i40e-make-a-define-from-a-large-constant.patch
 	patches.drivers/i40e-0111-i40e-update-led-set-args.patch
 	patches.drivers/i40e-0112-i40e-report-VF-MAC-addresses-correctly.patch
+	patches.drivers/i40e-0113-i40e-Dump-the-whole-NVM-not-half.patch
 
 	########################################################
 	# Wireless Networking
