i40e/i40evf: Do not free the dummy packet buffer synchronously (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15700,6 +15700,7 @@
 	patches.drivers/i40e-0407-i40e-FD-filter-replay-logic-bug-fix.patch
 	patches.drivers/i40e-0408-i40e-i40evf-initialize-context-descriptor.patch
 	patches.drivers/i40e-0409-i40e-limit-GLLAN_TXPRE_QDIS-to-QINDX-0-127.patch
+	patches.drivers/i40e-0410-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
 
 	########################################################
 	# Wireless Networking
