--- a/series.conf
+++ b/series.conf
@@ -15754,6 +15754,7 @@
 	patches.drivers/i40e-0461-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 	patches.drivers/i40e-0462-i40e-i40evf-Bump-i40e-i40evf-version.patch
 	patches.drivers/i40e-0463-i40e-Add-dual-speed-module-support.patch
+	patches.drivers/i40e-0464-i40e-Allow-user-to-change-link-settings-if-link-is-d.patch
 
 	########################################################
 	# Wireless Networking
