--- a/series.conf
+++ b/series.conf
@@ -15562,6 +15562,7 @@
 	patches.drivers/i40e-0269-i40e-Enable-VF-Tx-bandwidth-setting.patch
 	patches.drivers/i40e-0270-i40e-Remove-a-FW-workaround.patch
 	patches.drivers/i40e-0271-i40e-Fix-an-issue-with-displaying-IPv4-FD-filters.patch
+	patches.drivers/i40e-0272-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 
 	########################################################
 	# Wireless Networking
