i40e/i40evf: fix TSO accounting (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15634,6 +15634,7 @@
 	patches.drivers/i40e-0341-i40e-clear-pxe-after-adminq-is-rebuilt.patch
 	patches.drivers/i40e-0342-i40e-not-all-VSIs-have-rings.patch
 	patches.drivers/i40e-0343-i40e-i40evf-remove-chatty-reset-messages.patch
+	patches.drivers/i40e-0344-i40e-i40evf-fix-TSO-accounting.patch
 
 	########################################################
 	# Wireless Networking
