--- a/series.conf
+++ b/series.conf
@@ -15419,6 +15419,7 @@
 	patches.drivers/i40e-0126-i40e-Remove-unnecessary-prototypes.patch
 	patches.drivers/i40e-0127-i40e-remove-un-necessary-io-write.patch
 	patches.drivers/i40e-0128-i40e-Record-dma-buffer-info-for-dummy-packets.patch
+	patches.drivers/i40e-0129-i40e-Fix-SR-IOV-VF-port-VLAN.patch
 
 	########################################################
 	# Wireless Networking
