i40e: keep service tasks out of reset process (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15666,6 +15666,7 @@
 	patches.drivers/i40e-0373-i40e-debugfs-fix-to-dump-remote-LLDPDU.patch
 	patches.drivers/i40e-0374-i40e-Fix-scheduling-while-atomic-bug-during-NAPI.patch
 	patches.drivers/i40e-0375-i40e-clear-VEB-stats-when-pf-stats-are-cleared.patch
+	patches.drivers/i40e-0376-i40e-keep-service-tasks-out-of-reset-process.patch
 
 	########################################################
 	# Wireless Networking
