i40e: retry call on timeout (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15340,6 +15340,7 @@
 	patches.drivers/i40e-0047-i40e-firmware-version-fields-offsets-update.patch
 	patches.drivers/i40e-0048-i40e-allow-one-more-vector-for-VFs.patch
 	patches.drivers/i40e-0049-i40e-select-reset-counters-correctly.patch
+	patches.drivers/i40e-0050-i40e-retry-call-on-timeout.patch
 
 	########################################################
 	# Wireless Networking
