i40e: use struct assign instead of memcpy (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15422,6 +15422,7 @@
 	patches.drivers/i40e-0129-i40e-Fix-SR-IOV-VF-port-VLAN.patch
 	patches.drivers/i40e-0130-i40e-avoid-unnecessary-register-read.patch
 	patches.drivers/i40e-0131-i40e-Do-not-enable-default-port-on-the-VEB.patch
+	patches.drivers/i40e-0132-i40e-use-struct-assign-instead-of-memcpy.patch
 
 	########################################################
 	# Wireless Networking
