i40e: do not flush after re-enabling interrupts (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15318,6 +15318,7 @@
 	patches.drivers/i40e-0025-i40e-Replace-ring-container-array-with-linked-list.patch
 	patches.drivers/i40e-0026-i40e-Move-rings-from-pointer-to-array-to-array-of-po.patch
 	patches.drivers/i40e-0027-i40e-Add-support-for-64-bit-netstats.patch
+	patches.drivers/i40e-0028-i40e-do-not-flush-after-re-enabling-interrupts.patch
 
 	########################################################
 	# Wireless Networking
