i40e: report VF MAC addresses correctly (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15402,6 +15402,7 @@
 	patches.drivers/i40e-0109-i40e-be-more-informative.patch
 	patches.drivers/i40e-0110-i40e-make-a-define-from-a-large-constant.patch
 	patches.drivers/i40e-0111-i40e-update-led-set-args.patch
+	patches.drivers/i40e-0112-i40e-report-VF-MAC-addresses-correctly.patch
 
 	########################################################
 	# Wireless Networking
