--- a/series.conf
+++ b/series.conf
@@ -15656,6 +15656,7 @@
 	patches.drivers/i40e-0363-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
 	patches.drivers/i40e-0364-i40e-i40evf-remove-FTYPE.patch
 	patches.drivers/i40e-0365-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
+	patches.drivers/i40e-0366-i40e-Fix-a-bug-in-ethtool-for-FD-drop-packet-filter-.patch
 
 	########################################################
 	# Wireless Networking
