--- a/series.conf
+++ b/series.conf
@@ -15693,6 +15693,7 @@
 	patches.drivers/i40e-0400-i40e-Add-debugfs-hooks-to-print-current-total-FD-fil.patch
 	patches.drivers/i40e-0401-i40e-fix-fdir-programming.patch
 	patches.drivers/i40e-0402-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
+	patches.drivers/i40e-0403-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 
 	########################################################
 	# Wireless Networking
