i40e: Retain MAC filters on port VLAN deletion (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15480,6 +15480,7 @@
 	patches.drivers/i40e-0187-i40e-make-message-meaningful.patch
 	patches.drivers/i40e-0188-i40e-whitespace-fixes.patch
 	patches.drivers/i40e-0189-i40e-Warn-admin-to-reload-VF-driver-on-port-VLAN-con.patch
+	patches.drivers/i40e-0190-i40e-Retain-MAC-filters-on-port-VLAN-deletion.patch
 
 	########################################################
 	# Wireless Networking
