--- a/series.conf
+++ b/series.conf
@@ -15316,6 +15316,7 @@
 	patches.drivers/i40e-0023-i40e-Split-bytes-and-packets-from-Rx-Tx-stats.patch
 	patches.drivers/i40e-0024-i40e-Move-q_vectors-from-pointer-to-array-to-array-o.patch
 	patches.drivers/i40e-0025-i40e-Replace-ring-container-array-with-linked-list.patch
+	patches.drivers/i40e-0026-i40e-Move-rings-from-pointer-to-array-to-array-of-po.patch
 
 	########################################################
 	# Wireless Networking
