--- a/series.conf
+++ b/series.conf
@@ -15375,6 +15375,7 @@
 	patches.drivers/i40e-0082-i40e-function-to-reconfigure-RSS-queues-and-rebuild.patch
 	patches.drivers/i40e-0083-i40e-Add-basic-support-for-get-set-channels-for-RSS.patch
 	patches.drivers/i40e-0084-i40e-rtnl_lock-in-reset-path-fixes.patch
+	patches.drivers/i40e-0085-i40e-support-for-suspend-and-resume.patch
 
 	########################################################
 	# Wireless Networking
