i40e/i40evf: i40e_register.h update (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15658,6 +15658,7 @@
 	patches.drivers/i40e-0365-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
 	patches.drivers/i40e-0366-i40e-Fix-a-bug-in-ethtool-for-FD-drop-packet-filter-.patch
 	patches.drivers/i40e-0367-i40e-use-stored-base_queue-value.patch
+	patches.drivers/i40e-0368-i40e-i40evf-i40e_register.h-update.patch
 
 	########################################################
 	# Wireless Networking
