i40e: transmit, receive, and NAPI (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15292,6 +15292,7 @@
 
 	# i40e SP4 update (bsc#909484 FATE#317397)
 	patches.drivers/i40e-0001-i40e-main-driver-core.patch
+	patches.drivers/i40e-0002-i40e-transmit-receive-and-NAPI.patch
 
 	########################################################
 	# Wireless Networking
