--- a/series.conf
+++ b/series.conf
@@ -15368,6 +15368,7 @@
 	patches.drivers/i40e-0075-i40e-fix-up-some-of-the-ethtool-connection-reporting.patch
 	patches.drivers/i40e-0076-i40e-fix-pf-reset-after-offline-test.patch
 	patches.drivers/i40e-0077-i40e-Tell-the-stack-about-our-actual-number-of-queue.patch
+	patches.drivers/i40e-0078-i40e-init-flow-control-settings-to-disabled.patch
 
 	########################################################
 	# Wireless Networking
