i40e: expose debug_write_register request (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15728,6 +15728,7 @@
 	patches.drivers/i40e-0435-i40e-adds-FCoE-code-to-the-i40e-driver.patch
 	patches.drivers/i40e-0436-i40e-Adds-FCoE-related-code-to-i40e-core-driver.patch
 	patches.drivers/i40e-0437-i40e-adds-FCoE-to-build-and-updates-its-documentatio.patch
+	patches.drivers/i40e-0438-i40e-expose-debug_write_register-request.patch
 
 	########################################################
 	# Wireless Networking
