--- a/series.conf
+++ b/series.conf
@@ -15605,6 +15605,7 @@
 	patches.drivers/i40e-0312-i40e-add-clear_pxe-AdminQ-request.patch
 	patches.drivers/i40e-0313-i40-disable-FCoE-for-MFP-modes.patch
 	patches.drivers/i40e-0314-i40e-relax-the-firmware-API-version-check.patch
+	patches.drivers/i40e-0315-i40e-don-t-use-OR-to-check-a-value.patch
 
 	########################################################
 	# Wireless Networking
