--- a/series.conf
+++ b/series.conf
@@ -15510,6 +15510,7 @@
 	patches.drivers/i40e-0217-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 	patches.drivers/i40e-0218-i40e-clean-up-comment-style.patch
 	patches.drivers/i40e-0219-i40e-Remove-a-FW-workaround-for-Number-of-MSIX-vecto.patch
+	patches.drivers/i40e-0220-i40e-count-timeout-events.patch
 
 	########################################################
 	# Wireless Networking
