i40e: clear all queues and interrupts (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15694,6 +15694,7 @@
 	patches.drivers/i40e-0401-i40e-fix-fdir-programming.patch
 	patches.drivers/i40e-0402-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 	patches.drivers/i40e-0403-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
+	patches.drivers/i40e-0404-i40e-clear-all-queues-and-interrupts.patch
 
 	########################################################
 	# Wireless Networking
