i40e: reinit flow for the main VSI (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15371,6 +15371,7 @@
 	patches.drivers/i40e-0078-i40e-init-flow-control-settings-to-disabled.patch
 	patches.drivers/i40e-0079-i40e-trivial-fixes.patch
 	patches.drivers/i40e-0080-i40e-use-same-number-of-queues-as-CPUs.patch
+	patches.drivers/i40e-0081-i40e-reinit-flow-for-the-main-VSI.patch
 
 	########################################################
 	# Wireless Networking
