i40e: remove chatty log messages (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15397,6 +15397,7 @@
 	patches.drivers/i40e-0104-i40e-move-i40e_reset_vf.patch
 	patches.drivers/i40e-0105-i40e-refactor-VF-reset-flow.patch
 	patches.drivers/i40e-0106-i40e-remove-redundant-code.patch
+	patches.drivers/i40e-0107-i40e-remove-chatty-log-messages.patch
 
 	########################################################
 	# Wireless Networking
