i40e: keep allocated memory in structs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15412,6 +15412,7 @@
 	patches.drivers/i40e-0119-i40e-use-functions-to-enable-and-disable-icr-0.patch
 	patches.drivers/i40e-0120-i40e-reinit-buffer-size-each-time.patch
 	patches.drivers/i40e-0121-i40e-fix-error-handling-when-alloc-of-vsi-array-fail.patch
+	patches.drivers/i40e-0122-i40e-keep-allocated-memory-in-structs.patch
 
 	########################################################
 	# Wireless Networking
