--- a/series.conf
+++ b/series.conf
@@ -15747,6 +15747,7 @@
 	patches.drivers/i40e-0454-i40e-ATR-policy-change-to-flush-the-table-to-clean-s.patch
 	patches.drivers/i40e-0455-i40e-Add-a-FD-flush-counter-to-ethtool.patch
 	patches.drivers/i40e-0456-i40e-Enable-l2tsel-bit-for-VLAN-tag-control.patch
+	patches.drivers/i40e-0457-i40e-set-num_queue_pairs-to-num-configured-by-VF.patch
 
 	########################################################
 	# Wireless Networking
