i40e/i40evf: Reset Head and Tail on AQ initialization (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15660,6 +15660,7 @@
 	patches.drivers/i40e-0367-i40e-use-stored-base_queue-value.patch
 	patches.drivers/i40e-0368-i40e-i40evf-i40e_register.h-update.patch
 	patches.drivers/i40e-0369-i40e-workaround-NVM-GLQF_HKEY.patch
+	patches.drivers/i40e-0370-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
 
 	########################################################
 	# Wireless Networking
