--- a/series.conf
+++ b/series.conf
@@ -15404,6 +15404,7 @@
 	patches.drivers/i40e-0111-i40e-update-led-set-args.patch
 	patches.drivers/i40e-0112-i40e-report-VF-MAC-addresses-correctly.patch
 	patches.drivers/i40e-0113-i40e-Dump-the-whole-NVM-not-half.patch
+	patches.drivers/i40e-0114-i40e-fix-mac-address-checking.patch
 
 	########################################################
 	# Wireless Networking
