i40e: whitespace fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15486,6 +15486,7 @@
 	patches.drivers/i40e-0193-i40e-updates-to-AdminQ-interface.patch
 	patches.drivers/i40e-0194-i40e-fix-compile-warning-on-checksum_local.patch
 	patches.drivers/i40e-0195-i40e-Change-firmware-workaround.patch
+	patches.drivers/i40e-0196-i40e-whitespace-fixes.patch
 
 	########################################################
 	# Wireless Networking
