i40e: reorder block declarations in debugfs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15328,6 +15328,7 @@
 	patches.drivers/i40e-0035-i40e-fix-sign-extension-issue.patch
 	patches.drivers/i40e-0036-i40e-refactor-fdir-setup-function.patch
 	patches.drivers/i40e-0037-i40e-tweaking-icr0-handling-for-legacy-irq.patch
+	patches.drivers/i40e-0038-i40e-reorder-block-declarations-in-debugfs.patch
 
 	########################################################
 	# Wireless Networking
