--- a/series.conf
+++ b/series.conf
@@ -15619,6 +15619,7 @@
 	patches.drivers/i40e-0326-i40e-set-lan_veb-index.patch
 	patches.drivers/i40e-0327-i40e-add-VEB-stats-to-ethtool.patch
 	patches.drivers/i40e-0328-i40e-print-message-for-pre-production-hardware.patch
+	patches.drivers/i40e-0329-i40e-i40evf-check-AQ-register-for-valid-data.patch
 
 	########################################################
 	# Wireless Networking
