--- a/series.conf
+++ b/series.conf
@@ -15431,6 +15431,7 @@
 	patches.drivers/i40e-0138-i40e-Hide-the-Port-VLAN-VLAN-ID.patch
 	patches.drivers/i40e-0139-i40e-Admin-queue-shutdown-fixes.patch
 	patches.drivers/i40e-0140-i40e-check-asq-alive-before-notify.patch
+	patches.drivers/i40e-0141-i40e-Do-not-allow-AQ-calls-from-ndo-ops.patch
 
 	########################################################
 	# Wireless Networking
