i40e: updates to AdminQ interface (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15483,6 +15483,7 @@
 	patches.drivers/i40e-0190-i40e-Retain-MAC-filters-on-port-VLAN-deletion.patch
 	patches.drivers/i40e-0191-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/i40e-0192-i40e-check-desc-pointer-before-printing.patch
+	patches.drivers/i40e-0193-i40e-updates-to-AdminQ-interface.patch
 
 	########################################################
 	# Wireless Networking
