--- a/series.conf
+++ b/series.conf
@@ -15353,6 +15353,7 @@
 	patches.drivers/i40e-0060-i40e-get-media-type-during-link-info.patch
 	patches.drivers/i40e-0061-i40e-Add-flag-for-L2-VEB-filtering.patch
 	patches.drivers/i40e-0062-i40e-enable-early-hardware-support.patch
+	patches.drivers/i40e-0063-i40e-refactor-reset-code.patch
 
 	########################################################
 	# Wireless Networking
