i40e: Fix dump output from debugfs calls (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15377,6 +15377,7 @@
 	patches.drivers/i40e-0084-i40e-rtnl_lock-in-reset-path-fixes.patch
 	patches.drivers/i40e-0085-i40e-support-for-suspend-and-resume.patch
 	patches.drivers/i40e-0086-i40e-Remove-FCoE-in-i40e_virtchnl_pf.c-code.patch
+	patches.drivers/i40e-0087-i40e-Fix-dump-output-from-debugfs-calls.patch
 
 	########################################################
 	# Wireless Networking
