i40e: Expose AQ debugfs hooks (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15432,6 +15432,7 @@
 	patches.drivers/i40e-0139-i40e-Admin-queue-shutdown-fixes.patch
 	patches.drivers/i40e-0140-i40e-check-asq-alive-before-notify.patch
 	patches.drivers/i40e-0141-i40e-Do-not-allow-AQ-calls-from-ndo-ops.patch
+	patches.drivers/i40e-0142-i40e-Expose-AQ-debugfs-hooks.patch
 
 	########################################################
 	# Wireless Networking
