i40e: set VF state to active when reset is complete (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15497,6 +15497,7 @@
 	patches.drivers/i40e-0204-i40evf-clean-up-memsets.patch
 	patches.drivers/i40e-0205-i40e-Setting-i40e_down-bit-for-tx_timeout.patch
 	patches.drivers/i40e-0206-i40e-remove-dead-code.patch
+	patches.drivers/i40e-0207-i40e-set-VF-state-to-active-when-reset-is-complete.patch
 
 	########################################################
 	# Wireless Networking
