i40e: release NVM resource reservation on startup (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15453,6 +15453,7 @@
 	patches.drivers/i40e-0160-i40e-add-a-comment-on-barrier-and-fix-panic-on-reset.patch
 	patches.drivers/i40e-0161-i40e-disable-packet-split.patch
 	patches.drivers/i40e-0162-i40e-Cleanup-reconfig-rss-path.patch
+	patches.drivers/i40e-0163-i40e-release-NVM-resource-reservation-on-startup.patch
 
 	########################################################
 	# Wireless Networking
