--- a/series.conf
+++ b/series.conf
@@ -15603,6 +15603,7 @@
 	patches.drivers/i40e-0310-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 	patches.drivers/i40e-0311-i40e-Clear-recovery-pending-if-reset-failed.patch
 	patches.drivers/i40e-0312-i40e-add-clear_pxe-AdminQ-request.patch
+	patches.drivers/i40e-0313-i40-disable-FCoE-for-MFP-modes.patch
 
 	########################################################
 	# Wireless Networking
