i40e: allow one more vector for VFs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15338,6 +15338,7 @@
 	patches.drivers/i40e-0045-i40e-clear-AQ-head-and-tail-registers.patch
 	patches.drivers/i40e-0046-i40e-simplify-aq-head-tail-len-setups.patch
 	patches.drivers/i40e-0047-i40e-firmware-version-fields-offsets-update.patch
+	patches.drivers/i40e-0048-i40e-allow-one-more-vector-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
