i40e: Add checks and message for Qualified Module info (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15748,6 +15748,7 @@
 	patches.drivers/i40e-0455-i40e-Add-a-FD-flush-counter-to-ethtool.patch
 	patches.drivers/i40e-0456-i40e-Enable-l2tsel-bit-for-VLAN-tag-control.patch
 	patches.drivers/i40e-0457-i40e-set-num_queue_pairs-to-num-configured-by-VF.patch
+	patches.drivers/i40e-0458-i40e-Add-checks-and-message-for-Qualified-Module-inf.patch
 
 	########################################################
 	# Wireless Networking
