--- a/series.conf
+++ b/series.conf
@@ -15722,6 +15722,7 @@
 	patches.drivers/i40e-0429-i40e-i40evf-Add-nvmupdate-support.patch
 	patches.drivers/i40e-0430-i40e-i40evf-fix-extension-header-csum-logic.patch
 	patches.drivers/i40e-0431-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
+	patches.drivers/i40e-0432-i40e-Fix-firmware-API-version-errors.patch
 
 	########################################################
 	# Wireless Networking
