i40e: Add set_pauseparam to ethtool (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15709,6 +15709,7 @@
 	patches.drivers/i40e-0416-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 	patches.drivers/i40e-0417-i40e-move-nway-reset.patch
 	patches.drivers/i40e-0418-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
+	patches.drivers/i40e-0419-i40e-Add-set_pauseparam-to-ethtool.patch
 
 	########################################################
 	# Wireless Networking
