--- a/series.conf
+++ b/series.conf
@@ -15736,6 +15736,7 @@
 	patches.drivers/i40e-0443-i40e-Fix-missing-uapi-linux-dcbnl.h-include-in-i40e_.patch
 	patches.drivers/i40e-0444-i40e-fix-sparse-non-static-symbol-warning.patch
 	patches.drivers/i40e-0445-i40e-use-correct-structure-type-name-in-sizeof.patch
+	patches.drivers/i40e-0446-i40e-Cleaning-up-missing-null-terminate-in-conjuncti.patch
 
 	########################################################
 	# Wireless Networking
