--- a/series.conf
+++ b/series.conf
@@ -15589,6 +15589,7 @@
 	patches.drivers/i40e-0296-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 	patches.drivers/i40e-0297-i40e-remove-hardcode-of-stats-struct-size-in-ethtool.patch
 	patches.drivers/i40e-0298-i40e-Don-t-disable-SR-IOV-when-VFs-are-assigned.patch
+	patches.drivers/i40e-0299-i40e-remove-Tx-work-for-ptp.patch
 
 	########################################################
 	# Wireless Networking
