i40e: fix compile warning on checksum_local (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15484,6 +15484,7 @@
 	patches.drivers/i40e-0191-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/i40e-0192-i40e-check-desc-pointer-before-printing.patch
 	patches.drivers/i40e-0193-i40e-updates-to-AdminQ-interface.patch
+	patches.drivers/i40e-0194-i40e-fix-compile-warning-on-checksum_local.patch
 
 	########################################################
 	# Wireless Networking
