i40e/i40evf: carefully fill tx ring (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15514,6 +15514,7 @@
 	patches.drivers/i40e-0221-i40e-Remove-a-redundant-filter-addition.patch
 	patches.drivers/i40e-0222-i40e-Fix-static-checker-warning.patch
 	patches.drivers/i40e-0223-i40e-fix-nvm-version-and-remove-firmware-report.patch
+	patches.drivers/i40e-0224-i40e-i40evf-carefully-fill-tx-ring.patch
 
 	########################################################
 	# Wireless Networking
