i40e: increase reset wait time (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15621,6 +15621,7 @@
 	patches.drivers/i40e-0328-i40e-print-message-for-pre-production-hardware.patch
 	patches.drivers/i40e-0329-i40e-i40evf-check-AQ-register-for-valid-data.patch
 	patches.drivers/i40e-0330-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
+	patches.drivers/i40e-0331-i40e-increase-reset-wait-time.patch
 
 	########################################################
 	# Wireless Networking
