i40e: Check PCI_IOV config to avoid compile error (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15590,6 +15590,7 @@
 	patches.drivers/i40e-0297-i40e-remove-hardcode-of-stats-struct-size-in-ethtool.patch
 	patches.drivers/i40e-0298-i40e-Don-t-disable-SR-IOV-when-VFs-are-assigned.patch
 	patches.drivers/i40e-0299-i40e-remove-Tx-work-for-ptp.patch
+	patches.drivers/i40e-0300-i40e-Check-PCI_IOV-config-to-avoid-compile-error.patch
 
 	########################################################
 	# Wireless Networking
