--- a/series.conf
+++ b/series.conf
@@ -15534,6 +15534,7 @@
 	patches.fixes/net-core-Add-VF-link-state-control.patch
 	patches.drivers/i40e-0242-i40e-support-VF-link-state-ndo.patch
 	patches.drivers/i40e-0243-i40e-Patch-to-enable-Ethtool-netdev-feature-flag-for.patch
+	patches.drivers/i40e-0244-i40e-Refactor-and-cleanup-i40e_open-adding-i40e_vsi_.patch
 
 	########################################################
 	# Wireless Networking
