i40e: (ptp) warn when PF_ID does not match in PRTTSYN_CTL0 (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15717,6 +15717,7 @@
 	patches.drivers/i40e-0424-i40e-never-generate-both-software-and-hardware-times.patch
 	patches.drivers/i40e-0425-i40e-fix-race-conditions-on-queuing-skb-for-HW-time-.patch
 	patches.drivers/i40e-0426-i40e-i40evf-Clean-up-code.patch
+	patches.drivers/i40e-0427-i40e-ptp-warn-when-PF_ID-does-not-match-in-PRTTSYN_C.patch
 
 	########################################################
 	# Wireless Networking
