--- a/series.conf
+++ b/series.conf
@@ -15442,6 +15442,7 @@
 	patches.drivers/i40e-0149-i40e-move-PF-ID-init-from-PF-reset-to-SC-init.patch
 	patches.drivers/i40e-0150-i40e-check-MAC-type-before-any-REG-access.patch
 	patches.drivers/i40e-0151-i40e-rework-shadow-ram-read-functions.patch
+	patches.drivers/i40e-0152-i40e-whitespace-paren-and-comment-tweaks.patch
 
 	########################################################
 	# Wireless Networking
