i40e: add wake-on-lan support (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15389,6 +15389,7 @@
 	patches.drivers/i40e-0096-i40e-Suppress-HMC-error-to-Interrupt-message-level.patch
 	patches.fixes/pci_regs.h-Add-PCI-bus-link-speed-and-width-defines.patch
 	patches.drivers/i40e-0098-i40e-Populate-and-check-pci-bus-speed-and-width.patch
+	patches.drivers/i40e-0099-i40e-add-wake-on-lan-support.patch
 
 	########################################################
 	# Wireless Networking
