i40e: Do not directly increment Tx next_to_use (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15309,6 +15309,7 @@
 	patches.drivers/i40e-0016-i40e-Link-code-updates.patch
 	patches.drivers/i40e-0017-i40e-Drop-unused-completed-stat.patch
 	patches.drivers/i40e-0018-i40e-Cleanup-Tx-buffer-info-layout.patch
+	patches.drivers/i40e-0019-i40e-Do-not-directly-increment-Tx-next_to_use.patch
 
 	########################################################
 	# Wireless Networking
