i40e: do not bail when disabling if Tx queue disable fails (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15466,6 +15466,7 @@
 	patches.drivers/i40e-0173-i40e-fix-long-lines.patch
 	patches.drivers/i40e-0174-i40e-Cleanup-Doxygen-warnings.patch
 	patches.drivers/i40e-0175-i40e-Setting-queue-count-to-1-using-ethtool-is-valid.patch
+	patches.drivers/i40e-0176-i40e-do-not-bail-when-disabling-if-Tx-queue-disable-.patch
 
 	########################################################
 	# Wireless Networking
