--- a/series.conf
+++ b/series.conf
@@ -15351,6 +15351,7 @@
 	patches.drivers/i40e-0058-i40e-separate-TSYNVALID-and-TSYNINDX-fields-in-Rx-de.patch
 	patches.drivers/i40e-0059-i40e-check-multi-bit-state-correctly.patch
 	patches.drivers/i40e-0060-i40e-get-media-type-during-link-info.patch
+	patches.drivers/i40e-0061-i40e-Add-flag-for-L2-VEB-filtering.patch
 
 	########################################################
 	# Wireless Networking
