--- a/series.conf
+++ b/series.conf
@@ -15723,6 +15723,7 @@
 	patches.drivers/i40e-0430-i40e-i40evf-fix-extension-header-csum-logic.patch
 	patches.drivers/i40e-0431-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
 	patches.drivers/i40e-0432-i40e-Fix-firmware-API-version-errors.patch
+	patches.drivers/i40e-0433-i40e-Give-link-more-time-after-setting-flow-control.patch
 
 	########################################################
 	# Wireless Networking
