--- a/series.conf
+++ b/series.conf
@@ -15674,6 +15674,7 @@
 	patches.drivers/i40e-0381-i40e-Add-PF-reset-when-Malicious-driver-event-for-PF.patch
 	patches.drivers/i40e-0382-i40e-warn-on-newer-older-firmware-API-rev.patch
 	patches.drivers/i40e-0383-i40e-fix-a-stray-print-message.patch
+	patches.drivers/i40e-0384-i40e-Fix-ethtool-coalesce-settings.patch
 
 	########################################################
 	# Wireless Networking
