i40e: Bypass timeout recovery level 0 so as to not cause MDD (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15681,6 +15681,7 @@
 	patches.drivers/i40e-0388-i40e-allow-user-to-set-LAA-again.patch
 	patches.drivers/i40e-0389-i40e-reapply-LAA-after-reset.patch
 	patches.drivers/i40e-0390-i40e-no-pf-reset-at-pci-remove.patch
+	patches.drivers/i40e-0391-i40e-Bypass-timeout-recovery-level-0-so-as-to-not-ca.patch
 
 	########################################################
 	# Wireless Networking
