i40e: Drop dead code and flags from Tx hotpath (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15311,6 +15311,7 @@
 	patches.drivers/i40e-0018-i40e-Cleanup-Tx-buffer-info-layout.patch
 	patches.drivers/i40e-0019-i40e-Do-not-directly-increment-Tx-next_to_use.patch
 	patches.drivers/i40e-0020-i40e-clean-up-Tx-fast-path.patch
+	patches.drivers/i40e-0021-i40e-Drop-dead-code-and-flags-from-Tx-hotpath.patch
 
 	########################################################
 	# Wireless Networking
