--- a/series.conf
+++ b/series.conf
@@ -15455,6 +15455,7 @@
 	patches.drivers/i40e-0162-i40e-Cleanup-reconfig-rss-path.patch
 	patches.drivers/i40e-0163-i40e-release-NVM-resource-reservation-on-startup.patch
 	patches.drivers/i40e-0164-i40e-remove-interrupt-on-AQ-error.patch
+	patches.drivers/i40e-0165-i40e-accept-pf-to-pf-adminq-messages.patch
 
 	########################################################
 	# Wireless Networking
