--- a/series.conf
+++ b/series.conf
@@ -15495,6 +15495,7 @@
 	patches.drivers/i40e-0202-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
 	patches.drivers/i40e-0203-i40e-Add-missing-braces-to-i40e_dcb_need_reconfig.patch
 	patches.drivers/i40e-0204-i40evf-clean-up-memsets.patch
+	patches.drivers/i40e-0205-i40e-Setting-i40e_down-bit-for-tx_timeout.patch
 
 	########################################################
 	# Wireless Networking
