i40e: never generate both software and hardware timestamps (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15714,6 +15714,7 @@
 	patches.drivers/i40e-0421-i40e-remove-unnecessary-break-after-goto.patch
 	patches.fixes/net-add-ndo-to-get-id-of-physical-port-of-the-device.patch
 	patches.drivers/i40e-0423-i40e-Add-ndo_get_phys_port_id-callback-support.patch
+	patches.drivers/i40e-0424-i40e-never-generate-both-software-and-hardware-times.patch
 
 	########################################################
 	# Wireless Networking
