--- a/series.conf
+++ b/series.conf
@@ -15542,6 +15542,7 @@
 	patches.drivers/i40e-0249-i40e-Fix-a-message-string.patch
 	patches.drivers/i40e-0250-i40e-Delete-ATR-filter-on-RST.patch
 	patches.drivers/i40e-0251-i40e-Make-the-alloc-and-free-queue-vector-calls-orth.patch
+	patches.drivers/i40e-0252-i40e-eeprom-integrity-check-on-load-and-empr.patch
 
 	########################################################
 	# Wireless Networking
