i40e: add a comment on barrier and fix panic on reset (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15450,6 +15450,7 @@
 	patches.drivers/i40e-0157-i40e-use-kernel-specific-defines.patch
 	patches.drivers/i40e-0158-i40e-Fix-GPL-header.patch
 	patches.drivers/i40e-0159-i40e-Fix-MAC-format-in-Write-MAC-address-AQ-cmd.patch
+	patches.drivers/i40e-0160-i40e-add-a-comment-on-barrier-and-fix-panic-on-reset.patch
 
 	########################################################
 	# Wireless Networking
