--- a/series.conf
+++ b/series.conf
@@ -15594,6 +15594,7 @@
 	patches.drivers/i40e-0301-i40e-fix-passing-wrong-error-code-to-i40e_open.patch
 	patches.drivers/i40e-0302-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/i40e-0303-i40e-i40evf-Update-check-for-AQ-aliveness.patch
+	patches.drivers/i40e-0304-i40e-enable-descriptor-prefetch-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
