i40e/i40evf: Update RSS configuration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15667,6 +15667,7 @@
 	patches.drivers/i40e-0374-i40e-Fix-scheduling-while-atomic-bug-during-NAPI.patch
 	patches.drivers/i40e-0375-i40e-clear-VEB-stats-when-pf-stats-are-cleared.patch
 	patches.drivers/i40e-0376-i40e-keep-service-tasks-out-of-reset-process.patch
+	patches.drivers/i40e-0377-i40e-i40evf-Update-RSS-configuration.patch
 
 	########################################################
 	# Wireless Networking
