--- a/series.conf
+++ b/series.conf
@@ -15356,6 +15356,7 @@
 	patches.drivers/i40e-0063-i40e-refactor-reset-code.patch
 	patches.drivers/i40e-0064-i40e-Enable-all-PCTYPEs-except-FCOE-for-RSS.patch
 	patches.drivers/i40e-0065-i40e-only-set-up-the-rings-to-be-used.patch
+	patches.drivers/i40e-0066-i40e-clear-test-state-bit-after-all-ethtool-tests.patch
 
 	########################################################
 	# Wireless Networking
