i40e: Don't stop driver probe when querying DCB config fails (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15577,6 +15577,7 @@
 	patches.drivers/i40e-0284-i40e-Use-port-VLAN-in-MAC-VLAN-filter-configuration.patch
 	patches.drivers/i40e-0285-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 	patches.drivers/i40e-0286-i40e-Redistribute-queue-vectors-after-DCB-reconfigur.patch
+	patches.drivers/i40e-0287-i40e-Don-t-stop-driver-probe-when-querying-DCB-confi.patch
 
 	########################################################
 	# Wireless Networking
