--- a/series.conf
+++ b/series.conf
@@ -15556,6 +15556,7 @@
 	patches.drivers/i40e-0263-i40e-fix-TCP-flag-replication-for-hardware-offload.patch
 	patches.drivers/i40e-0264-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/i40e-0265-i40e-Add-bridge-FDB-add-del-dump-ops.patch
+	patches.drivers/i40e-0266-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
 
 	########################################################
 	# Wireless Networking
