i40e: Link code updates (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15306,6 +15306,7 @@
 	patches.drivers/i40e-0013-i40e-convert-ret-to-aq_ret.patch
 	patches.drivers/i40e-0014-i40e-better-return-values.patch
 	patches.drivers/i40e-0015-i40e-clean-up-coccicheck-reported-errors.patch
+	patches.drivers/i40e-0016-i40e-Link-code-updates.patch
 
 	########################################################
 	# Wireless Networking
