i40e: refactor VF reset flow (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15395,6 +15395,7 @@
 	patches.fixes/net-add-802.1ad-802.1ah-QinQ-ethertypes.patch
 	patches.drivers/i40e-0103-i40e-Rx-checksum-offload-for-VXLAN.patch
 	patches.drivers/i40e-0104-i40e-move-i40e_reset_vf.patch
+	patches.drivers/i40e-0105-i40e-refactor-VF-reset-flow.patch
 
 	########################################################
 	# Wireless Networking
