--- a/series.conf
+++ b/series.conf
@@ -15467,6 +15467,7 @@
 	patches.drivers/i40e-0174-i40e-Cleanup-Doxygen-warnings.patch
 	patches.drivers/i40e-0175-i40e-Setting-queue-count-to-1-using-ethtool-is-valid.patch
 	patches.drivers/i40e-0176-i40e-do-not-bail-when-disabling-if-Tx-queue-disable-.patch
+	patches.drivers/i40e-0177-i40e-allow-VF-to-remove-any-MAC-filter.patch
 
 	########################################################
 	# Wireless Networking
