i40e/i40evf: fix extension header csum logic (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15720,6 +15720,7 @@
 	patches.drivers/i40e-0427-i40e-ptp-warn-when-PF_ID-does-not-match-in-PRTTSYN_C.patch
 	patches.drivers/i40e-0428-i40e-fix-format-mismatch-in-drivers-net-ethernet-int.patch
 	patches.drivers/i40e-0429-i40e-i40evf-Add-nvmupdate-support.patch
+	patches.drivers/i40e-0430-i40e-i40evf-fix-extension-header-csum-logic.patch
 
 	########################################################
 	# Wireless Networking
