i40e: Remove a FW workaround (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15560,6 +15560,7 @@
 	patches.drivers/i40e-0267-i40e-i40evf-Bump-build-versions.patch
 	patches.drivers/i40e-0268-i40e-Reset-the-VF-upon-conflicting-VLAN-configuratio.patch
 	patches.drivers/i40e-0269-i40e-Enable-VF-Tx-bandwidth-setting.patch
+	patches.drivers/i40e-0270-i40e-Remove-a-FW-workaround.patch
 
 	########################################################
 	# Wireless Networking
